<resources>
    <string name="app_name">GentleReminder</string>
    <string name="new_test">New Test</string>
    <string name="edit">Edit Reminder</string>
    <string name="delete">Delete Reminder</string>
    <string name="title">Reminder Title</string>
    <string name="confirm">Confirm</string>
    <string name="cancel">Cancel</string>
    <string name="title_hint">Name of your reminder</string>
    <string name="note_hint">Description of reminder</string>
    <string name="note">Reminder Note</string>
    <string name="monday">Mon</string>
    <string name="tuesday">Tue</string>
    <string name="wednesday">Wed</string>
    <string name="thursday">Thu</string>
    <string name="friday">Fri</string>
    <string name="saturday">Sat</string>
    <string name="sunday">Sun</string>
    <string name="vibrate">Vibrate</string>
</resources>
